--- a/Destructuring Arrays - Objects/index.html
+++ b/Destructuring Arrays - Objects/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Đây là Cấu trúc mảng
+    <h1> Đây là Cấu trúc mảng và object
     </h1>
     <script src="main.js"></script>
 </body>
